tests/ui/typeck/qualified-path-params-2.stderr
error[E0220]: associated type `f` not found for `<S as Tr>::A`
  --> $DIR/qualified-path-params-2.rs:17:24
   |
LL | type A = <S as Tr>::A::f<u8>;
   |                        ^ there is a similarly named associated type `A` in the trait `Tr`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0220`.
